--- a/examples/standard.yml
+++ b/examples/standard.yml
@@ -1,7 +1,7 @@
 # This is a standard workflow to validate all .version files
 # found in the root directory of the repository and any subdirectories,
 # whenever something is pushed to any branch in the repository, or to a "foreign" branch active in a pull request.
-# It should be enough in most cases.
+# It should cover most cases.
 name: Validate AVC .version files
 on:
   push:
