Validate remote version files

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Validate the KSP-AVC .version file of your mod against the AVC sch
 author: 'DasSkelett'
 inputs:
   exclude:
-    description: 'Comma-separated list of paths to version files to exclude as string, e.g. "KSP-AVC.version,GameData/DogeCoinFlag/DGC.version"'
+    description: 'JSON-array-like list of paths to version files to exclude (supports wildcards), e.g. ["KSP-AVC.version", "GameData/DogeCoinFlag/*.version"]'
     required: false
     default: ''
 runs:
