Allow specifying list of files to validate on command line.
Any arguments given when invoking main.py are now treated as a list of files to be validated exclusively.

This needed a minor refactor of validator.py to avoid code duplication.

--- a/examples/exclusions.yml
+++ b/examples/exclusions.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Validate files
         with:
           exclude: '["./invalid.version", "./test/corruptVersionFiles/**/*.version"]'
-        uses: DasSkelett/AVC-VersionFileValidator@v1
+        uses: DasSkelett/AVC-VersionFileValidator
