--- a/examples/standard.yml
+++ b/examples/standard.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           fetch-depth: 1
       - name: Validate files
-        uses: DasSkelett/AVC-VersionFileValidator@v1
+        uses: DasSkelett/AVC-VersionFileValidator
