--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,14 +1,14 @@
 name: Unit Tests
 on:
   push:
+    branches:
+      - master
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
   run_unit_tests:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
