--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -24,5 +24,5 @@ jobs:
         python -m unittest tests
     - name: Run unit tests in Docker container
       run: |
-        docker build --target tests -t avc-versionfilevalidator .
+        docker build -f Dockerfile-dev --target tests -t avc-versionfilevalidator .
         docker run avc-versionfilevalidator
