--- a/examples/standard.yml
+++ b/examples/standard.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           fetch-depth: 1
       - name: Validate files
-        uses: DasSkelett/AVC-VersionFileValidator
+        uses: DasSkelett/AVC-VersionFileValidator@master
