--- a/examples/whitelist.yml
+++ b/examples/whitelist.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Validate files
         with:
           only: '["./GameData/YourMod.version"]'
-        uses: DasSkelett/AVC-VersionFileValidator
+        uses: DasSkelett/AVC-VersionFileValidator@master
